# kursovayaBackend

./: .coverage  README.md  pyproject.toml
tests/: test_latest_operations.py  testfile.json
utils/: latest_operations.py  main.py
